added milestone video link

--- a/final/index.html
+++ b/final/index.html
@@ -51,7 +51,7 @@
     <h2>Updates to our initial plans</h2>
     <p>In our initial proposal, we foresaw having to work more on the GUI; but now that we are working from the one made by Dillon we hope to make the physics implementation and some of our stretch goals, like implementing different shaders and simulating a lidui surface using a triangle mesh, the bulk of our project work. We have also decided to work with OpenCL to speed up our simulation, since this is a part of the structure of Dillon Yao's project that we are working from, and it will provide us a convenient way to implement our physics functions in a single .cl file (this will require us to become acquainted with this open-source GPU programming framework).</p>
     <p></p>
-    <p>The following video summarizes our findings this week:</p>
+    <p>We have created a <a href="https://drive.google.com/file/d/1W7nkhEaBUD_lSQLTP9WCB3x5juxhw7qw/view?usp=sharing">video</a> summarizing our milestone updates and research findings.</p>
     
 <h1 align="middle">Project Proposal</h1>
     <h2>Summary</h2>
