--- a/final/index.html
+++ b/final/index.html
@@ -28,6 +28,7 @@
             </table>
         <div></div>
     <h5 align="middle">Ashvin Dhawan · Jacob Jiang · Yassin Oulad Daoud · Ishil Puri</h5>
+    <h3 align="middle"><a  target="_blank" href="https://drive.google.com/file/d/1sgCCLdC_zS6mjdafsgaUtPXmWNolIT4c/view?usp=sharing">Link to video</a></h3>
     
     </div>
 <br><br>
